update repo for group
